--- a/main-style.css
+++ b/main-style.css
@@ -85,7 +85,8 @@ body{
     height: 100px;
     width: 220px;
     color: black;
-    font-family: 'B52', arial;
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-family: 'Russo One', sans-serif;
     font-size: 20px;
     border-radius: 20px;
     border: 1px solid black;
